# hokkaido-nandoku-api

./: .gitignore  DEVELOPMENT.md  Dockerfile  GEMINI.md  README.md  SECURITY.md  SECURITY_SCAN_REPORT.md  SECURITY_SCAN_SUMMARY.md  deploy.sh
.gemini/commands/: analyze.toml  clarify.toml  constitution.toml  implement.toml  plan.toml  specify.toml  tasks.toml
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  commands.md  entrypoints.md  project_summary.md  suggested_commands.md  tech_stack.md
cmd/api/: main.go
internal/handler/: handler_test.go
internal/repository/: placename_repository.go
source/: Dockerfile  build.sh  go.mod  go.sum
source/cmd/api/: main.go
source/data/: nandoku_chimei.csv
source/internal/handler/: handler.go  handler_test.go
source/internal/model/: placename.go
source/internal/repository/: placename_repository.go  placename_repository_test.go
source/pkg/csvloader/: loader.go  loader_test.go
source/tests/integration/: api_test.go
specs/001-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-api/contracts/: openapi.yaml
specs/002-list-get-json/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-api-gateway-list/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
terraform/: .gitignore  .terraform.lock.hcl  cloudfront.tf  main.tf  outputs.tf  variables.tf  waf.tf
tests/integration/: api_test.go
tools/: README.md  generate_hokkaido_nandoku_list.py  nandoku.csv  pyproject.toml
(+2 files in other folders)
